--- a/public/template/login.html
+++ b/public/template/login.html
@@ -3,7 +3,7 @@
 	<h4>Login with your AD credentials to begin using the application.</h4>
 	<div class="filter-box__form-element">
 	    <div class="filter-box__username">
-	        <input ng-model="username" class="filter-box__text-input filter-box__text-input--user" type="text" size="20" placeholder="Username" ng-enter="login()" />
+	        <input ng-model="username" class="filter-box__text-input filter-box__text-input--user" type="text" size="20" placeholder="Username" ng-enter="login()" autofocus />
 	    </div>
 	</div>
 	<div class="filter-box__form-element">
