--- a/public/css/main.css
+++ b/public/css/main.css
@@ -173,6 +173,12 @@ body {
     height: 80%;
 }
 
+.app-name {
+    font-size: 1.5em;
+    margin-left: 28%;
+    padding-top: 4px;
+}
+
 .navigation {
     position: fixed;
     top: 56px;
@@ -268,6 +274,11 @@ body {
     margin-left: 66px;
     margin-top: 98px;
     transition: 0.5s ease;
+}
+
+.cardui--pa {
+    width: 96%;
+    margin-left: 10px;
 }
 
 /*.cardui.ng-enter, .cardui.ng-leave {
@@ -465,9 +476,9 @@ body {
 }
 
 .data-grid {
-    width: 71%;
+    width: 100%;
     float: left;
-    border: 1px solid #2980b9;
+    /*border: 1px solid #2980b9;*/
 }
 
 .data-grid__grid-title {
@@ -503,6 +514,10 @@ body {
 .table-loose tbody tr {
     border-bottom: 1px solid #ddd;
     font-size: 12px !important;
+}
+
+.table-loose--lgtext tbody tr {
+    font-size: 1.25em !important;
 }
 
 .interfaceinfo-table tbody tr:nth-child(15) {
@@ -584,7 +599,7 @@ body {
 
 .data-summary table {
     width: 100%;
-    border: 1px solid #16a085;
+    /*border: 1px solid #16a085;*/
 }
 
 .data-summary table td {
@@ -851,11 +866,79 @@ body {
 }
 
 /* ==========================================================================
+   Checkbox classes
+   ========================================================================== */
+
+/* Base for label styling */
+[type="checkbox"]:not(:checked),
+[type="checkbox"]:checked {
+  position: absolute;
+  left: -9999px;
+}
+[type="checkbox"]:not(:checked) + label,
+[type="checkbox"]:checked + label {
+  position: relative;
+  padding-left: 20px;
+  cursor: pointer;
+}
+
+/* checkbox aspect */
+[type="checkbox"]:not(:checked) + label:before,
+[type="checkbox"]:checked + label:before {
+  content: '';
+  position: absolute;
+  left:0; top: 2px;
+  width: 17px; height: 17px;
+  border: 1px solid #aaa;
+  background: #f8f8f8;
+  border-radius: 3px;
+  /*box-shadow: inset 0 1px 3px rgba(0,0,0,.3)*/
+}
+/* checked mark aspect */
+[type="checkbox"]:not(:checked) + label:after,
+[type="checkbox"]:checked + label:after {
+  content: '✔';
+  position: absolute;
+  top: 0; left: 4px;
+  font-size: 14px;
+  color: #09ad7e;
+  transition: all .2s;
+}
+/* checked mark aspect changes */
+[type="checkbox"]:not(:checked) + label:after {
+  opacity: 0;
+  transform: scale(0);
+}
+[type="checkbox"]:checked + label:after {
+  opacity: 1;
+  transform: scale(1);
+}
+/* disabled checkbox */
+[type="checkbox"]:disabled:not(:checked) + label:before,
+[type="checkbox"]:disabled:checked + label:before {
+  box-shadow: none;
+  border-color: #bbb;
+  background-color: #ddd;
+}
+[type="checkbox"]:disabled:checked + label:after {
+  color: #999;
+}
+[type="checkbox"]:disabled + label {
+  color: #aaa;
+}
+/* accessibility */
+[type="checkbox"]:checked:focus + label:before,
+[type="checkbox"]:not(:checked):focus + label:before {
+  border: 1px dotted blue;
+}
+
+
+/* ==========================================================================
    form classes
    ========================================================================== */
 .filter-box {
     font-family: 'Lato', sans-serif;
-    color: #838383;
+    /*color: #838383;*/
 }
 
 .filter-box__form-element {
@@ -864,6 +947,9 @@ body {
     vertical-align: middle;
 }
 
+.filter-box__form-element--loose {
+    margin-right: 20px;
+}
 
 .filter-box__text-input {
     border: 1px solid #95a5a6;
@@ -1411,6 +1497,13 @@ body {
     background-position: 6px;
 }
 
+.icon-provision {
+    background-image: url(../img/data29.svg);
+    background-repeat: no-repeat;
+    background-size: 36px;
+    background-position: 6px;
+}
+
 /* content style */
 
 .st-menu ul {
@@ -1730,17 +1823,32 @@ body {
     .cardui {
         width: 95%;
     }
+
+    .cardui--pa {
+        width: 98%;
+        margin-left: 10px;
+    }
 }
 
 @media (max-width: 1600px) {
     .cardui {
         width: 94%;
     }
+
+    .cardui--pa {
+        width: 98%;
+        margin-left: 10px;
+    }
 }
 
 @media (max-width: 1024px) {
     .cardui {
         width: 90%;
+    }
+
+    .cardui--pa {
+        width: 92%;
+        margin-left: 10px;
     }
 }
 
@@ -1749,17 +1857,32 @@ body {
     .cardui {
         width: 88%;
     }
+
+    .cardui--pa {
+        width: 91%;
+        margin-left: 10px;
+    }
 }
 
 @media (max-width: 667px) {
     .cardui {
         width: 86%;
     }
+
+    .cardui--pa {
+        width: 89%;
+        margin-left: 10px;
+    }
 }
 
 @media (max-width: 414px) {
     .cardui {
         width: 84%;
+    }
+
+    .cardui--pa {
+        width: 87%;
+        margin-left: 10px;
     }
 
     .navigation > .nav-icon {
